AWS-TERRAFORM/DAY13-Virtual-Private-Cloud-Create-Destroy-Manage/tf-vpc/security-groups.tf
# Allow SSH
resource "aws_security_group" "allow_ssh" {
  vpc_id = aws_vpc.tf-vpc.id
  name   = "allow_ssh"

  # Allow SSH
  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"] # Change to your IP for security
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "allow_ssh"
  }
}

# Allow HTTP
resource "aws_security_group" "allow_http" {
  vpc_id = aws_vpc.tf-vpc.id
  name   = "allow_http"

  ingress {
    from_port   = 80
    to_port     = 80
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"] # Change to your IP for security
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "allow_http"
  }
}

# Allow HTTPS
resource "aws_security_group" "allow_https" {
  description = "Allow https at port 443"
  vpc_id      = aws_vpc.tf-vpc.id
  name        = "allow_https"

  ingress {
    from_port   = 443
    to_port     = 443
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"] # Change to your IP for security
  }

  egress {
    from_port   = 0
    to_port     = 0
    protocol    = "-1"
    cidr_blocks = ["0.0.0.0/0"]
  }

  tags = {
    Name = "allow_https"
  }
}
